--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<nav>
+    <div class="logo"></div>
+    <div class="links">
+        <a href="">Meine Fravrieten</a>
+        <a href="">Kategorien</a>
+    </div>
+    <div class="search-box">
+        <div class="search-bar">
+            
+        </div>
+    </div>
+</nav>
