--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,11 +1,9 @@
 nav {
-    position: fixed;
-    width: 80%;
-    height: 90px;
-    background-color: black;
-    border-radius: 40px;
-    padding: 20px;
-    padding-inline: 30px;
-    display: flex;
-    align-items: center;
+height: 100px;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+// background-color: gray;
 }
+
