--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,12 +1,18 @@
 <nav>
-    <div class="logo"></div>
-    <div class="links">
-        <a href="">Meine Fravrieten</a>
-        <a href="">Kategorien</a>
-    </div>
-    <div class="search-box">
-        <div class="search-bar">
-            
+    <div class="nav-container">
+        <div class="logo"></div>
+        <div class="links">
+            <a href="">Meine Fravrieten</a>
+            <a href="">Kategorien</a>
         </div>
+        <div class="search-box">
+            <div class="search-bar">
+
+            </div>
+        </div>
+        <button mat-fab extended >
+            <mat-icon>favorite</mat-icon>
+            Basic
+        </button>
     </div>
 </nav>
